Update Firebase configuration in index.html
Updated Firebase configuration values in index.html.

--- a/index.html
+++ b/index.html
@@ -536,14 +536,14 @@
         import { getFirestore, collection, addDoc, getDocs, doc, setDoc, updateDoc, onSnapshot, query, where, orderBy, getDoc, deleteDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyBkC4JI5zC5HbNZ9ryaNicrTjjgP1VQWtw",
-            authDomain: "student-council-6d488.firebaseapp.com",
-            projectId: "student-council-6d488",
-            storageBucket: "student-council-6d488.firebasestorage.app",
-            messagingSenderId: "682214432800",
-            appId: "1:682214432800:web:23643c32c43373e11d9c45",
-            measurementId: "G-Z4VKVMH5RX"
-        };
+  apiKey: "AIzaSyBkC4JI5zC5HbNZ9ryaNicrTjjgP1VQWtw",
+  authDomain: "student-council-6d488.firebaseapp.com",
+  projectId: "student-council-6d488",
+  storageBucket: "student-council-6d488.firebasestorage.app",
+  messagingSenderId: "682214432800",
+  appId: "1:682214432800:web:a9f9ac756ea7c61b1d9c45",
+  measurementId: "G-0VKP5368VF"
+};
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
