--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <div class="text-2xl font-bold text-slate-800" id="profile-good-points">0</div>
                         </div>
                         <div class="bg-green-50 rounded-xl p-3 border border-green-100">
-                            <div class="text-[10px] text-green-700 font-bold">แต้มขยะ</div>
+                            <div class="text-[10px] text-green-700 font-bold">แต้มธนนาคารขยะ</div>
                             <div class="text-2xl font-bold text-slate-800" id="profile-waste-points">0</div>
                         </div>
                     </div>
